# NuConvex

./: BasicHPolytopeND.h  BasicHPolytopeND.ih  CMakeLists.txt  DigitalSurface2InnerPointFunctor.h  DigitalSurface2InnerPointFunctor.ih  EigenValues3D.h  FuzzyPartition.h  FuzzyPartition.ih  InteriorSpelDigitalSurfaceEmbedder.h  InteriorSpelDigitalSurfaceEmbedder.ih  MaximalPlaneSummary.h  MaximalPlaneSummary.ih  MetricCluster.h  MetricCluster.ih  NuConvexSet.h  NuConvexSet.ih  README.md  SquaredEuclideanDistance.h  TangentialCover.h  TangentialCover.ih  convex-cover.cpp  convex-normals.cpp  nu-convex-viewer.cpp  testMetricCluster.cpp
